- All density estimation based function are now faster because Rcpp is used for the bottleneck stats function.
- zplot: Changed interpolation from akima to MBA due to licensing issues with akima, see https://www.user2017.brussels/uploads/bivand_gebhardt_user17_a0.pdf

Version 1.1.8 (CRAN, 2018-08-20)
- new implementation of Pareto density estimation (PDE), pareto radius and optimal number of bins for histograms.
- AdaptGauss package detached and new PDE attached to MD plot.
- ABCbarplot: Barplot with Sorted Data Colored by ABCanalysis which can be also used as a scree plot.
- Several minor documentatio corrections and bugfixes.

Version 1.1.7 (GitHub, 2018-04-17)
o Bugfix: In MD-plot Jitter Plot for colomuns with one unique value, in the case it is zero, corrected.
o Bugfix: In MD-plot statistical cases for colomuns with one unique value but more than 45000 cases corrected.
o Bugfix: In MD-plot does not crash anymore if columns exists with not one finite values but data has more cases than the sample size.
o Bugfix: Namespace of AdaptGauss package added for Pareto density estimation
o Bugfix: Regression line in QQplot fixed.

Version 1.1.6 (CRAN, 2018-03-08)
	o Major Improvement: The MD-plot samples now data automatically above an threshold in order to be usuable for Big Data.
	o Bugfixes: In MD-plot the testing against uniform distribution now works also for one feauture. A crash is fixed where a columns has not even one finite value.
	o Bugfix: If colnames of Data are given in MD-plot but not unique, they are renamed to unique colnames.
	o Bugfix: Plot3D checks now that the length of Cls is equal to the number of rows of data.
	o Bugfix: ClassPDEplot did not plot all pdfs for SameKernelsAndRadius=0.
	o Improvement: ClassMDplot now jitters points instead of visualizing pdf if not enough data in class is given.
	o Bugfix: In Heatmap the x labels are now plotted correctly.
	o Bugfix: In ClassMDplot class names now work correctly.